[gd_scene load_steps=7 format=3 uid="uid://5aysjs1fwdih"]

[ext_resource type="Script" uid="uid://b532kccewf0kj" path="res://scripts/props/lock.gd" id="1_5cm7k"]
[ext_resource type="Texture2D" uid="uid://c85pknn3otuca" path="res://assets/sprites/atlas/ui_lock.tres" id="1_yuwaw"]
[ext_resource type="Texture2D" uid="uid://0os68ackj50f" path="res://assets/sprites/atlas/trapdoor_open.tres" id="2_l5fhu"]
[ext_resource type="Texture2D" uid="uid://bhftnri6q4vwf" path="res://assets/sprites/atlas/trapdoor_door.tres" id="3_8eywx"]
[ext_resource type="Texture2D" uid="uid://dm38g46mh1hpw" path="res://assets/sprites/atlas/trapdoor_closed.tres" id="4_ojjqo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5cm7k"]
size = Vector2(87, 78)

[node name="lock" type="Area2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3.5, -1)
shape = SubResource("RectangleShape2D_5cm7k")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -45.0
offset_top = -37.0
offset_right = 40.0
offset_bottom = 37.0
script = ExtResource("1_5cm7k")

[node name="open_sprite" type="Sprite2D" parent="."]
visible = false
z_index = -2
position = Vector2(125, 8)
texture = ExtResource("2_l5fhu")

[node name="door_sprite" type="Sprite2D" parent="open_sprite"]
z_index = -2
position = Vector2(220, -74)
texture = ExtResource("3_8eywx")

[node name="closed_sprite" type="Sprite2D" parent="."]
z_index = -2
position = Vector2(133, -8)
texture = ExtResource("4_ojjqo")

[node name="lock_sprite" type="Sprite2D" parent="closed_sprite"]
position = Vector2(-133, 8)
texture = ExtResource("1_yuwaw")
